internal/app/playbooks/role/catalogs/CICD/ArgoCD/7.0.0/files/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: "argocd.cnstudio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: argocd-server
            port: 
              number: 443
